# ophyd-v2-tango

./: .gitignore  Pipfile  TODO  cbtest.py  crazy.py  exampledevice.py  mockproxy.py  monitortest.py  mp_test.py  pipetest.py  plotter.ipynb  pyproject.toml  setup.py  sptest.py  tango_devices.py  td_test.py  test.py  test_example_device.py  test_sardana_motor.py  test_tango_devices.py  test_with_dev_proxy.py  test_with_mock_proxy.py
.github/workflows/: docs.yml  main.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: comm.rst  conf.py  connectors.rst  creatingadevice.rst  explanation.txt  index.rst  proxy.rst  signals.rst  test.rst  tests.rst  versions.txt  weirdthingstomention.txt
docs/actualdocs/: attributes.rst  comm.rst  commandspipes.rst  creatingadevice.rst  test.rst  weirdthingstomention.txt
image/: Dockerfile  startsard.sh
ophyd_tango_devices/: devices.py  mockproxy.py  motor.py  proxy.py  signals.py
ophyd_tango_devices.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
otd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ophyd_tango_devices/: mockproxy.py  signals.py  simproxy.py  tango_devices.py
src/tangophyd/: tango_devices.py  test_tango_devices.py
tests/: test_example_device.py  test_sardana_motor.py  test_sim_proxy.py  test_with_mock_proxy.py
