[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "tangophyd"
version = "0.0.1"
authors = [
  { name="James Souter", email="james.souter@diamond.ac.uk" },
]
description = "Package implementing support for some Tango devices in Bluesky"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jsouter/ophyd-v2-tango"
"Bug Tracker" = "https://github.com/jsouter/ophyd-v2-tango/issues"
